--- a/config.ini
+++ b/config.ini
@@ -31,15 +31,17 @@ TIME_SLEEP = 0.1
 MAX_WAIT = 2
 BACKEND = uia
 
-; MES_PACKING_QTY_ID = txtpackqty
-; MES_PACKING_QTY_TYPE = Text
-; MES_GROUPBOX_ID = groupBox5
-; MES_GROUPBOX_TYPE = Group
-MES_SN_INPUT_POSITION = 
-; MES_SN_INPUT_ID = txtSN
+; L352, T104, R780, B136
+
+MES_PACKING_QTY_ID = txtpackqty
+MES_PACKING_QTY_TYPE = Text
+MES_GROUPBOX_ID = groupBox5
+MES_GROUPBOX_TYPE = Group
+MES_SN_INPUT_POSITION = 352, 104, 780, 136
+MES_SN_INPUT_ID = txtSN
 
 ; MES_SN_INPUT_ID = MainWindow.centralwidget.groupBox_2.txtpackqty
-MES_SN_INPUT_ID=MainWindow.centralwidget.groupBox_2.ruleresult
+; MES_SN_INPUT_ID=MainWindow.centralwidget.groupBox_2.ruleresult
 
 
 ;MES_PACKING_QTY_ID = MainWindow.centralwidget.groupBox_2.txtpackqty
