--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [PLC]
-COM = COM9
+COM = COM2
 BAUDRATE = 115200
 
 [CAMERA]
@@ -7,7 +7,7 @@ IDC1 = 0
 IDC2 = 0
 
 [SETTING]
-SCAN_LIMIT = 8
+SCAN_LIMIT = 10
 IS_OPEN_CAM_PROPS = 0
 FOLDER_TO_KEEP = 10
 NUM_CAMERA = 1
@@ -18,27 +18,29 @@ IS_SAVE_NG_IMAGE = 1
 IMAGE_NG_FOLDER = ./image_NG
 
 [THRESH]
-;MIN_THRESH = 30
-;MAX_THRESH = 70
-
 MIN_THRESH = 20
 MAX_THRESH = 90
 THRESH_JUMP = 3
 
 [MES]
 MES_APP_NAME = 
-TIME_SLEEP = 0.1
-MAX_WAIT = 2
+TIME_SLEEP = 0.2
+MAX_WAIT = 1.5
 BACKEND = uia
 
 ; L352, T104, R780, B136
 
-MES_PACKING_QTY_ID = txtpackqty
-MES_PACKING_QTY_TYPE = Text
-MES_GROUPBOX_ID = groupBox5
-MES_GROUPBOX_TYPE = Group
-MES_SN_INPUT_POSITION = 352, 104, 780, 136
+; MES_PACKING_QTY_ID = txtpackqty
+; MES_PACKING_QTY_TYPE = Text
+; MES_GROUPBOX_ID = groupBox5
+; MES_GROUPBOX_TYPE = Group
+
+; MES_SN_INPUT_POSITION = 352, 104, 780, 136 LTRB
+MES_SN_INPUT_POSITION = [352, 104, 780, 136]
+; MES_SN_INPUT_POSITION = [450, 200, 900, 240]
+MES_AREA_SNAPSHOT_POSITION = [229, 44, 826, 493]
 MES_SN_INPUT_ID = txtSN
+MES_COMPARE_CONFIDENCE = 0.997
 
 ; MES_SN_INPUT_ID = MainWindow.centralwidget.groupBox_2.txtpackqty
 ; MES_SN_INPUT_ID=MainWindow.centralwidget.groupBox_2.ruleresult
