--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [PLC]
-COM = COM2
+COM = COM9
 BAUDRATE = 115200
 
 [CAMERA]
@@ -21,22 +21,24 @@ IMAGE_NG_FOLDER = ./image_NG
 MIN_THRESH = 20
 MAX_THRESH = 90
 THRESH_JUMP = 3
+BLOCK_SIZE_1 = 91 
+C1 = 3
+
 
 [MES]
 MES_APP_NAME = 
 TIME_SLEEP = 0.2
 MAX_WAIT = 1.5
 BACKEND = uia
+MES_MOVEOUTQTY_POSITION = [1115, 192, 1258, 213]
 
 ; L352, T104, R780, B136
-
 ; MES_PACKING_QTY_ID = txtpackqty
 ; MES_PACKING_QTY_TYPE = Text
 ; MES_GROUPBOX_ID = groupBox5
 ; MES_GROUPBOX_TYPE = Group
 
 ; MES_SN_INPUT_POSITION = 352, 104, 780, 136 LTRB
-MES_SN_INPUT_POSITION = [352, 104, 780, 136]
 ; MES_SN_INPUT_POSITION = [450, 200, 900, 240]
 MES_AREA_SNAPSHOT_POSITION = [229, 44, 826, 493]
 MES_SN_INPUT_ID = txtSN
